@@ -1,2 +1,2 @@
 @ECHO OFF
-java.exe -Xmx256M -XX:MaxPermSize=128m -Djava.endorsed.dirs=endorsed -jar caGrid-gaards-ui-@project.version@.jar
+java.exe -Xmx256M -XX:MaxPermSize=128m -jar caGrid-gaards-ui-@project.version@.jar
